Fixing z-index problem readspeaker button and submenu

--- a/themes/dimpact/scss/drupal/_navigation.scss
+++ b/themes/dimpact/scss/drupal/_navigation.scss
@@ -69,7 +69,7 @@ nav {
             text-decoration: none;
           }
           ul {
-            z-index: 15;
+            z-index: 150;
             padding: 0;
             li {
               float: none;
